// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button smaple 1`] = `
<button
  className="btn--text btn--medium  css-1wcm09e"
>
  Facebook
</button>
`;

exports[`Button smaple big 1`] = `
<button
  className="btn--text btn--big  css-1wcm09e"
>
  Facebook
</button>
`;

exports[`Button smaple contained 1`] = `
<button
  className="btn--contained btn--medium  css-1wcm09e"
>
  Facebook
</button>
`;
